# dandan

./: .gitignore  CMakeLists.txt  compile_commands.json  install.md
include/glad/: glad.h
src/: glad.c  libs.h  main.cpp
